--- a/portfolio.html
+++ b/portfolio.html
@@ -4,176 +4,246 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Web Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <header>
-      <nav class="nav-section">
-        <a class="logo link" href="/" lang="en"
-          >Web<span class="logo-black">Studio</span></a
-        >
-        <ul class="menu-nav list">
-          <li><a class="link" href="/">Студия</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="adress-nav list">
-        <li>
-          <a class="mail-nav link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <header class="header">
+      <div class="container flex">
+        <nav class="nav-section">
+          <a class="logo link" href="/" lang="en"
+            >Web<span class="logo-black">Studio</span></a
           >
-        </li>
-        <li>
-          <a class="tel-nav link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1 class="hero-title portfolio-title">Портфолио</h1>
-        <ul class="filter-list list">
-          <li>
-            <button class="button button-all" type="button" name="all">
-              Все
-            </button>
-          </li>
-          <li>
-            <button class="button" type="button" name="web-sites">
-              Веб-сайты
-            </button>
-          </li>
-          <li>
-            <button class="button" type="button" name="aplication">
-              Приложения
-            </button>
-          </li>
-          <li>
-            <button class="button" type="button" name="design">Дизайн</button>
-          </li>
-          <li>
-            <button class="button" type="button" name="marketing">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li class="list-item">
-            <img
-              src="./img/notebook.jpg"
-              alt="notebook"
-              width="370"
-              height="294"
-            />
-            <h2 class="prewiew-work-title title">Технокряк</h2>
-            <p class="prewiew-work-type">Веб-сайт</p>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/basketball.jpg"
-              alt="basketball"
-              width="370"
-              height="294"
-            />
-            <h2 class="prewiew-work-title title">
-              Постер New Orlean vs Golden Star
-            </h2>
-            <p class="prewiew-work-type">Дизайн</p>
-          </li>
-          <li class="list-item">
-            <img src="./img/fish.jpg" alt="seafood" width="370" height="294" />
-            <h2 class="prewiew-work-title title">
-              Ресторан <span lang="en">Seafood</span>
-            </h2>
-            <p class="prewiew-work-type">Приложение</p>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/headphones.jpg"
-              alt="headphones"
-              width="370"
-              height="294"
-            />
-            <h2 class="prewiew-work-title title">
-              Проект <span lang="en">Prime</span>
-            </h2>
-            <p class="prewiew-work-type">Маркетинг</p>
-          </li>
-          <li class="list-item">
-            <img src="./img/boxes.jpg" alt="boxes" width="370" height="294" />
-            <h2 class="prewiew-work-title title">
-              Проект <span lang="en">Boxes</span>
-            </h2>
-            <p class="prewiew-work-type">Приложение</p>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/display.jpg"
-              alt="display"
-              width="370"
-              height="294"
-            />
-            <h2 class="prewiew-work-title title" lang="en">
-              Inspiration has no Borders
-            </h2>
-            <p class="prewiew-work-type">Веб-сайт</p>
-          </li>
-          <li class="list-item">
-            <img src="./img/book.jpg" alt="book" width="370" height="294" />
-            <h2 class="prewiew-work-title title">
-              Издание <span lang="en">Limited Edition</span>
-            </h2>
-            <p class="prewiew-work-type">Дизайн</p>
-          </li>
-          <li class="list-item">
-            <img src="./img/label.jpg" alt="label" width="370" height="294" />
-            <h2 class="prewiew-work-title title">
-              Проект <span lang="en">LAB</span>
-            </h2>
-            <p class="prewiew-work-type">Маркетинг</p>
-          </li>
-          <li class="list-item">
-            <img src="./img/laptop.jpg" alt="laptop" width="370" height="294" />
-            <h2 class="prewiew-work-title title" lang="en">Growing Business</h2>
-            <p class="prewiew-work-type">Приложение</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="logo link" href="/" lang="en"
-        >Web<span class="logo-white">Studio</span></a
-      >
-      <adress class="adress">
-        <ul class="footer-nav list">
-          <li>
-            <a
-              class="adress-text link"
-              href="https://goo.gl/maps/DvVMSBrxsydVWDyE7"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="mail-footer link" href="mailto:info@devstudio.com"
+          <ul class="menu-nav list">
+            <li class="nav-item">
+              <a class="link" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="adress-nav list">
+          <li class="nav-item">
+            <a class="mail-nav link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="tel-footer link" href="tel:+380961111111"
+          <li class="nav-item">
+            <a class="tel-nav link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </adress>
+      </div>
+    </header>
+    <main>
+      <section class="galery-section">
+        <div class="container">
+          <h1 class="hero-title portfolio-title">Портфолио</h1>
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <button class="button button-all" type="button" name="all">
+                Все
+              </button>
+            </li>
+            <li class="filter-item">
+              <button class="button" type="button" name="web-sites">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="filter-item">
+              <button class="button" type="button" name="aplication">
+                Приложения
+              </button>
+            </li>
+            <li class="filter-item">
+              <button class="button" type="button" name="design">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button class="button" type="button" name="marketing">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <ul class="prewiew-card-list list">
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/notebook.jpg"
+                alt="notebook"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">Технокряк</h2>
+                <p class="prewiew-work-type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/basketball.jpg"
+                alt="basketball"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="prewiew-work-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/fish.jpg"
+                alt="seafood"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="prewiew-work-type">Приложение</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/headphones.jpg"
+                alt="headphones"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Проект <span lang="en">Prime</span>
+                </h2>
+                <p class="prewiew-work-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/boxes.jpg"
+                alt="boxes"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Проект <span lang="en">Boxes</span>
+                </h2>
+                <p class="prewiew-work-type">Приложение</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/display.jpg"
+                alt="display"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title" lang="en">
+                  Inspiration has no Borders
+                </h2>
+                <p class="prewiew-work-type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/book.jpg"
+                alt="book"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="prewiew-work-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/label.jpg"
+                alt="label"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title">
+                  Проект <span lang="en">LAB</span>
+                </h2>
+                <p class="prewiew-work-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                class="prewiew-photo img"
+                src="./img/laptop.jpg"
+                alt="laptop"
+                width="370"
+                height="294"
+              />
+              <div class="prewiew-card-sighn">
+                <h2 class="prewiew-work-title title" lang="en">
+                  Growing Business
+                </h2>
+                <p class="prewiew-work-type">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo link" href="/" lang="en"
+          >Web<span class="logo-white">Studio</span></a
+        >
+        <adress class="adress">
+          <ul class="footer-nav list">
+            <li class="footer-nav-item">
+              <a
+                class="adress-text link"
+                href="https://goo.gl/maps/DvVMSBrxsydVWDyE7"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-nav-item">
+              <a class="mail-footer link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="tel-footer link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </adress>
+      </div>
     </footer>
   </body>
 </html>
