--- a/index.html
+++ b/index.html
@@ -58,30 +58,30 @@
         <div class="container">
           <h2 class="section-title feature">Особенности</h2>
           <ul class="feature-list list">
-            <li>
+            <li class="feature-item">
               <h3 class="title">Внимание к деталям</h3>
-              <p class="feature-item">
+              <p class="feature-par">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="title">Пунктуальность</h3>
-              <p class="feature-item">
+              <p class="feature-par">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="title">Планирование</h3>
-              <p class="feature-item">
+              <p class="feature-par">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="title">Современные технологии</h3>
-              <p class="feature-item">
+              <p class="feature-par">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -93,7 +93,7 @@
           <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list">
-            <li class="do-img-print">
+            <li class="work-img-item">
               <img class="img"
                 src="./img/img01.jpg"
                 alt="печатаем"
@@ -101,7 +101,7 @@
                 height="294"
               />
             </li>
-            <li class="do-img-call">
+            <li class="work-img-item">
               <img class="img"
                 src="./img/img02.jpg"
                 alt="звоним"
@@ -109,7 +109,7 @@
                 height="294"
               />
             </li>
-            <li class="do-img-choose">
+            <li class="work-img-item">
               <img class="img"
                 src="./img/img03.jpg"
                 alt="выбираем цвета"
@@ -175,9 +175,9 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="/" lang="en"
-          >Web<span class="logo-white">Studio</span></a
-        >
+        <a class="logo-footer link" href="/" lang="en"
+          >Web<span class="logo-white">Studio</span>
+        </a>
         <adress class="adress">
           <ul class="footer-nav list">
             <li class="footer-nav-item">
