--- a/portfolio.html
+++ b/portfolio.html
@@ -217,9 +217,9 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="/" lang="en"
-          >Web<span class="logo-white">Studio</span></a
-        >
+        <a class="logo-footer link" href="/" lang="en"
+          >Web<span class="logo-white">Studio</span>
+        </a>
         <adress class="adress">
           <ul class="footer-nav list">
             <li class="footer-nav-item">
@@ -236,7 +236,7 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-nav-item">
               <a class="tel-footer link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
