--- a/index.html
+++ b/index.html
@@ -186,18 +186,16 @@
                 href="https://goo.gl/maps/DvVMSBrxsydVWDyE7"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+                >г. Киев, пр-т Леси Украинки, 26
+                </a>
             </li>
             <li class="footer-nav-item">
-              <a class="mail-footer link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="mail-footer link" href="mailto:info@devstudio.com">info@devstudio.com
+              </a>
             </li>
             <li class="footer-nav-item">
-              <a class="tel-footer link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11
+                </a>
             </li>
           </ul>
         </adress>
