--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
+      <section class="container">
         <a class="logo-footer link" href="/" lang="en"
           >Web<span class="logo-white">Studio</span>
         </a>
@@ -199,7 +199,7 @@
             </li>
           </ul>
         </adress>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
