--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <section class="container">
         <a class="logo-footer link" href="/" lang="en"
           >Web<span class="logo-white">Studio</span>
         </a>
@@ -228,22 +228,22 @@
                 href="https://goo.gl/maps/DvVMSBrxsydVWDyE7"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+                >г. Киев, пр-т Леси Украинки, 26
+              </a>
             </li>
             <li class="footer-nav-item">
               <a class="mail-footer link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com
+              </a>
             </li>
             <li class="footer-nav-item">
               <a class="tel-footer link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+                >+38 096 111 11 11
+              </a>
             </li>
           </ul>
         </adress>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
