--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
             >Web<span class="logo-black">Studio</span></a
           >
           <ul class="menu-nav list">
-            <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
-            <li class="nav-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-item">
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="link" href="./portfolio.html">Портфолио</a>
+            </li>
             <li class="nav-item"><a class="link" href="">Контакты</a></li>
           </ul>
         </nav>
@@ -42,7 +46,6 @@
             >
           </li>
         </ul>
-      
       </div>
     </header>
     <main>
@@ -89,12 +92,13 @@
           </ul>
         </div>
       </section>
-        <section class="section work">
-          <div class="container">
+      <section class="section work">
+        <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list">
             <li class="work-img-item">
-              <img class="img"
+              <img
+                class="img"
                 src="./img/img01.jpg"
                 alt="печатаем"
                 width="370"
@@ -102,7 +106,8 @@
               />
             </li>
             <li class="work-img-item">
-              <img class="img"
+              <img
+                class="img"
                 src="./img/img02.jpg"
                 alt="звоним"
                 width="370"
@@ -110,7 +115,8 @@
               />
             </li>
             <li class="work-img-item">
-              <img class="img"
+              <img
+                class="img"
                 src="./img/img03.jpg"
                 alt="выбираем цвета"
                 width="370"
@@ -119,59 +125,66 @@
             </li>
           </ul>
         </div>
-        </section>
-        <section class="team-section section">
-          <div class="container">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list list">
-              <li class="team-card">
-                <img class="img team-photo"
-                  src="./img/img11.jpg"
-                  alt="Product Designer"
-                  width="270"
-                  height="260"
-                />
-                <div class="card-sighn"><h3 class="title">Игорь Демьяненко</h3>
-                  <p class="position" lang="en">Product Designer</p>
-                </div>
-              </li>
-              <li class="team-card">
-                <img class="img team-photo"
-                  src="./img/img22.jpg"
-                  alt="Frontend Developer"
-                  width="270"
-                  height="260"
-                />
-                <div class="card-sighn"><h3 class="title">Ольга Репина</h3>
-                  <p class="position" lang="en">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="team-card">
-                <img class="img team-photo"
-                  src="./img/img33.jpg"
-                  alt="фото Николай Тарасов"
-                  width="270"
-                  height="260"
-                />
-                <div class="card-sighn"><h3 class="title">Николай Тарасов</h3>
-                  <p class="position" lang="en">Marketing</p>
-                </div>
-              </li>
-              <li class="team-card">
-                <img class="img team-photo"
-                  src="./img/img44.jpg"
-                  alt="UI Designer"
-                  width="270"
-                  height="260"
-                />
-                <div class="card-sighn"><h3 class="title">Михаил Ермаков</h3>
-                  <p class="position" lang="en">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+      </section>
+      <section class="team-section section">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-card">
+              <img
+                class="img team-photo"
+                src="./img/img11.jpg"
+                alt="Product Designer"
+                width="270"
+                height="260"
+              />
+              <div class="card-sighn">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p class="position" lang="en">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="img team-photo"
+                src="./img/img22.jpg"
+                alt="Frontend Developer"
+                width="270"
+                height="260"
+              />
+              <div class="card-sighn">
+                <h3 class="title">Ольга Репина</h3>
+                <p class="position" lang="en">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="img team-photo"
+                src="./img/img33.jpg"
+                alt="фото Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="card-sighn">
+                <h3 class="title">Николай Тарасов</h3>
+                <p class="position" lang="en">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="img team-photo"
+                src="./img/img44.jpg"
+                alt="UI Designer"
+                width="270"
+                height="260"
+              />
+              <div class="card-sighn">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p class="position" lang="en">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <section class="container">
@@ -187,15 +200,17 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 >г. Киев, пр-т Леси Украинки, 26
-                </a>
-            </li>
-            <li class="footer-nav-item">
-              <a class="mail-footer link" href="mailto:info@devstudio.com">info@devstudio.com
               </a>
             </li>
             <li class="footer-nav-item">
-              <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11
-                </a>
+              <a class="mail-footer link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="tel-footer link" href="tel:+380961111111"
+                >+38 096 111 11 11
+              </a>
             </li>
           </ul>
         </adress>
