--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </section>
     </main>
     <footer class="footer">
-      <section class="container">
+      <div class="container">
         <a class="logo-footer link" href="/" lang="en"
           >Web<span class="logo-white">Studio</span>
         </a>
@@ -214,7 +214,7 @@
             </li>
           </ul>
         </adress>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
