--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,7 @@
       </section>
     </main>
     <footer class="footer">
-      <section class="container">
+      <div class="container">
         <a class="logo-footer link" href="/" lang="en"
           >Web<span class="logo-white">Studio</span>
         </a>
@@ -243,7 +243,7 @@
             </li>
           </ul>
         </adress>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
